Fixed layout bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,8 +46,8 @@ body {
 	height: 100%;
 }
 .album .image img {
-	width: 100%;
-	height: 100%;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 /*
